[package]
name = "vet"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-vsock = "0.4.0"
tower = { version = "0.4.13", features = ["full", "tokio"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
